[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/player/sprites/player-test.png" type="Texture" id=1]
[ext_resource path="res://characters/player/sprites/light_occulder.png" type="Texture" id=12]
[ext_resource path="res://characters/player/player.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 46 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle_walk",
"speed": 8.0
} ]

[node name="player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 16 )

[node name="body_colider" type="CollisionShape2D" parent="."]
position = Vector2( 0.66745, 10.3416 )
shape = SubResource( 1 )

[node name="sprite_frames" type="AnimatedSprite" parent="."]
position = Vector2( 0.483779, 9.10542 )
scale = Vector2( 0.68018, 0.763153 )
frames = SubResource( 4 )
animation = "idle_walk"
playing = true

[node name="light_oculder" type="Light2D" parent="."]
z_index = -1
texture = ExtResource( 12 )
texture_scale = 2.0
range_layer_min = -100
range_layer_max = 9
shadow_enabled = true
shadow_filter = 5
shadow_filter_smooth = 8.2

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_smoothed = true
drag_margin_h_enabled = true
offset_v = -0.12
drag_margin_top = 0.42
drag_margin_bottom = 0.41
editor_draw_drag_margin = true

[node name="universal_timer" type="Timer" parent="."]

[connection signal="timeout" from="universal_timer" to="." method="_on_universal_timer_timeout"]
